# sonoUno-lhc

./: .gitignore  README.md  lhc_bash.py  lhc_display_bash.py  pyproject.toml  requirements.txt  test_volume.py
.github/workflows/: build.yml
sonouno_lhc/: lhc_bash.py  lhc_data.py  lhc_plot.py  lhc_sonification.py  lhcsound.py  models.py
src/sonouno_lhc/: __main__.py  io.py  lhc_data.py  lhc_plot.py  lhc_sonification.py  models.py
